# time-graph

./: Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
time-graph/: Cargo.toml
time-graph-macros/: Cargo.toml
time-graph-macros/src/: lib.rs
time-graph/benches/: empty.rs  overhead.rs
time-graph/examples/: calculation.rs  recursive.rs
time-graph/src/: callsite.rs  graph.rs  lib.rs
time-graph/src/table/: mod.rs  row.rs  table_cell.rs
time-graph/tests/: attribute.rs  callsite.rs  recursive.rs
