[package]
name = "time-graph-macros"
version = "0.3.2"
authors = ["Luthaf <luthaf@luthaf.fr>"]
edition = "2021"
rust-version = "1.74"
repository = "https://github.com/luthaf/time-graph"
license = "Apache-2.0/MIT"
keywords = ["profiling"]
categories = ["development-tools::profiling"]
description = """
Attribute macro to instrument functions and record their executing time with the
[time-graph](https://crates.io/crates/time-graph) crate.
"""

[lib]
proc-macro = true
test = false
doctest = false

[dependencies]
syn = {version = "2", features = ["full"]}
quote = "1"
