[package]
name = "time-graph"
version = "0.3.2"
authors = ["Luthaf <luthaf@luthaf.fr>"]
edition = "2018"
readme = "../README.md"
repository = "https://github.com/luthaf/time-graph"
license = "Apache-2.0/MIT"
keywords = ["profiling"]
categories = ["development-tools::profiling"]
description = """
Always-on profilling recording function timing and the corresponding call graph
"""

[[bench]]
name = "empty"
harness = false

[features]
default = []
table = ["unicode-width"]

[dependencies]
once_cell = "1"
quanta = "0.12"
petgraph = "0.6"

json = { version = "0.12", optional = true }
unicode-width = { version = "0.2", optional = true}

time-graph-macros = {path = "../time-graph-macros", version = "0.3.2"}

[dev-dependencies]
criterion = {version = "0.5", features = ["html_reports"]}
