[package]
name = "time-graph"
version = "0.3.3"
authors = ["Luthaf <luthaf@luthaf.fr>"]
edition = "2021"
rust-version = "1.74"
readme = "../README.md"
repository = "https://github.com/luthaf/time-graph"
license = "Apache-2.0/MIT"
keywords = ["profiling"]
categories = ["development-tools::profiling"]
description = """
Always-on profilling recording function timing and the corresponding call graph
"""

[[bench]]
name = "overhead"
harness = false

[features]
default = []
table = ["unicode-width"]

[dependencies]
once_cell = "1"
quanta = "0.12"
petgraph = "0.8"

json = { version = "0.12", optional = true }
unicode-width = { version = "0.2", optional = true}

time-graph-macros = {path = "../time-graph-macros", version = "0.3.3"}

[dev-dependencies]
criterion = {version = "0.8"}
